tests/fixtures/errors/null_byte.norm
:root
:data
k
v
contains \x00
